test/helpers/integrationHelpers/fail/messageId.js
//TODO Add message id fail tests
const messageId = () => {};

module.exports = {
  messageId,
};
